<?xml version="1.0" encoding="utf-8"?>
<com.android.p012wm.shell.compatui.letterboxedu.LetterboxEduDialogLayout xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@android:color/dim_foreground_light" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <FrameLayout android:id="@+id/letterbox_education_dialog_container" android:background="@drawable/letterbox_education_dialog_background" android:layout_width="0dp" android:layout_height="wrap_content" android:alpha="0" android:layout_marginHorizontal="@dimen/letterbox_education_dialog_margin" app:layout_constrainedHeight="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:layout_constraintWidth_max="@dimen/letterbox_education_dialog_width">
        <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:padding="24dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <ImageView android:layout_width="@dimen/letterbox_education_dialog_icon_size" android:layout_height="@dimen/letterbox_education_dialog_icon_size" android:layout_marginBottom="12dp" android:src="@drawable/letterbox_education_ic_letterboxed_app"/>
                <TextView android:textSize="24sp" android:textColor="@color/compat_controls_text" android:id="@+id/letterbox_education_dialog_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/letterbox_education_dialog_title" android:lineSpacingExtra="4sp" android:textAlignment="center"/>
                <TextView android:textSize="14sp" android:textColor="@color/letterbox_education_text_secondary" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/letterbox_education_dialog_subtext" android:lineSpacingExtra="4sp" android:textAlignment="center"/>
                <LinearLayout android:gravity="top" android:orientation="horizontal" android:paddingTop="48dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <com.android.p012wm.shell.compatui.letterboxedu.LetterboxEduDialogActionLayout android:layout_width="wrap_content" android:layout_height="wrap_content" app:icon="@drawable/letterbox_education_ic_screen_rotation" app:text="@string/letterbox_education_screen_rotation_text"/>
                    <com.android.p012wm.shell.compatui.letterboxedu.LetterboxEduDialogActionLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/letterbox_education_dialog_space_between_actions" app:icon="@drawable/letterbox_education_ic_reposition" app:text="@string/letterbox_education_reposition_text"/>
                </LinearLayout>
                <Button android:textColor="@android:color/dim_foreground_light" android:id="@+id/letterbox_education_dialog_dismiss_button" android:background="@drawable/letterbox_education_dismiss_button_background_ripple" android:layout_width="match_parent" android:layout_height="56dp" android:layout_marginTop="48dp" android:text="@string/letterbox_education_got_it" android:contentDescription="@string/letterbox_education_got_it" android:textAlignment="center"/>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</com.android.p012wm.shell.compatui.letterboxedu.LetterboxEduDialogLayout>
