<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/manage_education_view" android:background="@drawable/bubble_stack_user_education_bg" android:paddingTop="28dp" android:paddingBottom="16dp" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingEnd="48dp" android:layout_marginEnd="24dp">
    <TextView android:textAppearance="  ?0x7 31260672" android:textColor="@android:color/dim_foreground_light" android:ellipsize="end" android:gravity="start" android:id="@+id/user_education_title" android:paddingBottom="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bubbles_user_education_manage_title" android:maxLines="2" android:fontFamily="@android:string/permlab_clearAppCache" android:textAlignment="viewStart" android:paddingStart="16dp"/>
    <TextView android:textAppearance="@android:style/Preference.DeviceDefault.Information" android:textColor="@android:color/dim_foreground_light" android:ellipsize="end" android:gravity="start" android:id="@+id/user_education_description" android:paddingBottom="24dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bubbles_user_education_manage" android:maxLines="2" android:fontFamily="@android:string/permdesc_installPackages" android:textAlignment="viewStart" android:paddingStart="16dp"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/button_layout" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <include layout="@layout/bubble_manage_button"/>
        <com.android.p012wm.shell.common.AlphaOptimizedButton android:textSize="0x10502a1" android:textColor="@android:color/dim_foreground_light" android:layout_gravity="start" android:id="@+id/got_it" android:background="@drawable/bubble_manage_btn_bg" android:focusable="true" android:layout_width="wrap_content" android:layout_height="@dimen/bubble_manage_button_height" android:text="@string/bubbles_user_education_got_it" style="@style/Widget.DeviceDefault.Button.Borderless"/>
    </LinearLayout>
</LinearLayout>
