<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/media_output_dialog" android:layout_width="@dimen/large_dialog_width" android:layout_height="wrap_content">
    <LinearLayout android:gravity="left|center_vertical|center_horizontal|center|start" android:orientation="horizontal" android:paddingTop="16dp" android:paddingBottom="24dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="16dp" android:paddingEnd="16dp">
        <ImageView android:id="@+id/header_icon" android:layout_width="72dp" android:layout_height="72dp" android:importantForAccessibility="no"/>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="12dp">
            <ImageView android:gravity="center_vertical" android:id="@+id/app_source_icon" android:layout_width="20dp" android:layout_height="20dp" android:importantForAccessibility="no"/>
            <TextView android:textSize="16sp" android:textColor="?android:attr/textColorPrimary" android:ellipsize="end" android:gravity="center_vertical" android:id="@+id/header_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:fontFamily="@android:string/permlab_recordAudio"/>
            <TextView android:textSize="14sp" android:textColor="?android:attr/textColorSecondary" android:ellipsize="end" android:gravity="center_vertical" android:id="@+id/header_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:fontFamily="@android:string/permdesc_installPackages"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/device_list" android:layout_width="match_parent" android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/list_result" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:overScrollMode="never"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/cast_app_section" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_marginBottom="@dimen/dialog_bottom_padding" android:layout_marginStart="@dimen/dialog_side_padding" android:layout_marginEnd="@dimen/dialog_side_padding">
        <TextView android:textSize="16sp" android:textColor="?android:attr/textColorPrimary" android:ellipsize="end" android:layout_gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/launch_app_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/media_output_dialog_launch_app_text" android:maxLines="1" android:fontFamily="@android:string/permlab_recordAudio"/>
        <Button android:id="@+id/launch_app_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:drawablePadding="5dp" style="@style/Widget.Dialog.Button.BorderButton"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:layout_marginBottom="@dimen/dialog_bottom_padding" android:layout_marginStart="@dimen/dialog_side_padding" android:layout_marginEnd="@dimen/dialog_side_padding">
        <Button android:id="@+id/stop" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/keyboard_key_media_stop" style="@style/Widget.Dialog.Button.BorderButton"/>
        <Space android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1"/>
        <Button android:id="@+id/done" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/inline_done_button" style="@style/Widget.Dialog.Button"/>
    </LinearLayout>
</LinearLayout>
